# k8s-practice

./: Dockerfile  README.md  main.py  pyproject.toml
