[tool.poetry]
name = "k8s-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "k8s_practice"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
